# TreeRAG

./: .gitignore  LICENSE  README.md  README_zh-CN.md  README_zh-TW.md  pyproject.toml  requirements.txt
tests/: __init__.py  test_indexer.py  test_parser.py  test_searcher.py
treerag/: __init__.py  cache.py  cli.py  config.py  indexer.py  llm_client.py  models.py  parser.py  searcher.py
web/: __init__.py  app.py  routes.py
web/templates/: index.html
