[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "treerag"
version = "1.0.0"
description = "Tree-based Intelligent Document Retrieval Engine - 基于树索引的智能文档检索引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TreeRAG Team"},
]
keywords = ["rag", "document-retrieval", "llm", "tree-index", "search-engine", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0",
    "PyPDF2>=3.0",
    "python-docx>=0.8.11",
    "httpx>=0.24.0",
    "markdown>=3.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
all = [
    "treerag[anthropic,openai,dev]",
]

[project.scripts]
treerag = "treerag.cli:main"

[project.urls]
Homepage = "https://github.com/treerag/treerag"
Repository = "https://github.com/treerag/treerag"
Issues = "https://github.com/treerag/treerag/issues"

[tool.setuptools.packages.find]
include = ["treerag*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
